[project]
name = "data-cleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2"  # Required for Excel file support
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = ">=1.32.0"
pandas = ">=2.2.0"
openpyxl = ">=3.1.2"
